--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "stringify": "^3.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
+  },
+  "dependencies": {
+    "jquery": "^2.1.4"
   }
 }
