--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "watchify": "^2.4.0"
   },
   "dependencies": {
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "node-geocoder": "^3.4.1"
   }
 }
