--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "watchify": "^2.4.0"
   },
   "dependencies": {
+    "classnames": "^2.2.1",
     "jquery": "^2.1.4",
-    "node-geocoder": "^3.4.1"
+    "leaflet": "^0.7.7",
+    "node-geocoder": "^3.4.1",
+    "react-leaflet": "^0.9.0"
   }
 }
