--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jquery": "^2.1.4",
     "leaflet": "^0.7.7",
     "node-geocoder": "^3.4.1",
+    "node-sass": "^3.7.0",
     "react-leaflet": "^0.9.0"
   }
 }
